K8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: core-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
        version: v1
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:latest
        imagePullPolicy: IfNotPresent
        command:
        - bash
        - -c
        - |
          [...]
        ports:
        - containerPort: 9092
        - containerPort: 9093
        volumeMounts:
        - name: kafka-data
          mountPath: /var/lib/kafka
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 20
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 60
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 9092
          failureThreshold: 60
          periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1"
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: core-bank
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-port
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: controller-port
      protocol: TCP
      port: 9093
      targetPort: 9093
