K8s/transaction-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: core-bank
  labels:
    app: transaction-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
        version: v1
    spec:
      containers:
      - name: transaction-service
        image: transaction-service:latest # Build from Transaction-Service/Dockerfile
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  selector:
    app: transaction-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
