K8s/ingress-loadbalancer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-bank-ingress
  namespace: core-bank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "10"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8082"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
spec:
  ingressClassName: nginx
  rules:
  - host: account-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 8080
  - host: customer-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 8082
  - host: transaction-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 8083
  - host: authentication-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port:
              number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: core-bank
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-default-backend
  namespace: core-bank
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: default-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
